--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf node_modules/.vite"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.0",
     "axios": "^1.6.8",
     "proptype": "^1.0.0",
     "react": "^18.2.0",
@@ -20,7 +21,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.5",
-    "sweetalert2": "^11.6.13"
+    "sweetalert2": "^11.6.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
