Cambio url al nuevo servidor, elimino socketAction repetido, modifico import a actionSocket en app.jsx, comento mensajes recibido.

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-URL = "https://electrica-mosconi-server.onrender.com"
+URL = "https://electrica-mosconi-server.onrender.com/"
 LOCAL_SERVER = "https://localhost:3000"
