saco socket-io del useEffect principal

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-URL = "https://electrica-mosconi-server.onrender.com/"
-LOCAL_SERVER = "https://localhost:3000"
+VITE_API_URL= "https://electrica-mosconi-server.onrender.com"
+VITE_LOCAL_SERVER = "https://localhost:3000"
