--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
+    "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.8",
+    "babel-runtime": "^6.26.0",
+    "core-js": "^3.39.0",
     "proptype": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "redux": "^4.2.1",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.7.5",
     "sweetalert2": "^11.6.13"
