--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.25.0",
+    "@heroicons/react": "^2.2.0",
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.8",
     "babel-runtime": "^6.26.0",
